moved settings to appsettings

--- a/GameOfLife/appsettings.Development.json
+++ b/GameOfLife/appsettings.Development.json
@@ -6,6 +6,12 @@
     }
   },
   "Redis": {
-    "ConnectionString": "localhost:6379"
+    "ConnectionString": "localhost:6379",
+    "ExpiryHours": 24
+  },
+  "GameSettings": {
+    "BoardhMax": 1000,
+    "BoardMin": 1000,
+    "IterationMax": 10000
   }
 }
