--- a/GameOfLife/appsettings.json
+++ b/GameOfLife/appsettings.json
@@ -6,8 +6,13 @@
     }
   },
   "Redis": {
-    "ConnectionString": "localhost:6379"
+    "ConnectionString": "localhost:6379",
+    "ExpiryHours": 24
   },
-
+  "GameSettings": {
+    "BoardhMax": 1000,
+    "BoardMin": 1000,
+    "IterationMax": 10000
+  },
   "AllowedHosts": "*"
 }
